back: return finding single post by slug instead of id
